tools/deno/tests/snapshots/versions_test__deno_tool__unpin_version__removes_if_matching.snap
---
source: tools/deno/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {}
}
